old code extracted

--- a/index.html
+++ b/index.html
@@ -32,20 +32,16 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td></td>
-                            <td></td>
                         </tr>
                         <tr>
-                            <td><img class="arrow" id="ARROW_LEFT" src="images/arrow_left.png" alt=""/></td>
+                            <td><img src="images/arrow_left.png" alt=""/></td>
                             <td id="arrowsLeft">0</td>
-                            <td><img class="arrow" id="ARROW_RIGHT" src="images/arrow_right.png" alt=""/></td>
+                            <td><img src="images/arrow_right.png" alt=""/></td>
                             <td id="arrowsRight">0</td>
-                            <td><img class="arrow" id="ARROW_UP" src="images/arrow_top.png" alt=""/></td>
+                            <td><img src="images/arrow_top.png" alt=""/></td>
                             <td id="arrowsUp">0</td>
-                            <td><img class="arrow" id="ARROW_BOTTOM" src="images/arrow_bottom.png" alt=""/></td>
+                            <td><img src="images/arrow_bottom.png" alt=""/></td>
                             <td id="arrowsDown">0</td>
-                            <td><img class="arrow" id="ARROW_REVERSED" src="images/arrow_reversed.png" alt=""/></td>
-                            <td id="arrowsReversed">0</td>
                         </tr>
                     </tbody>
                 </table>
